--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,14 +7,13 @@
             <h1><a href="/">Laboratório de Bergster</a></h1>
         </div>
 
+        {% for post in posts %} 
         <div>
-            <h2><a href="">Meu primeiro post</a></h2>
-            <p>publicado: 14.06.2021, 12:14</p>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia <br>
-             quam venenatis vestibulum. Donec id elit non mi porta gravida <br>
-             at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor <br>
-             mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>published: {{ post.published_date }}</p>
+            <h3><a href=''>{{ post.title }}</a></h3>
+            <p>{{ post.text|linebreaksbr }}</p>
         </div>
+        {% endfor %} 
 <br>
         <div>
             <h2><a href="">Meu segundo post</a></h2>
